git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3148 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951
Former-commit-id: fd937fd79586bed302aaa651dd28826e5988271e
Former-commit-id: 6d77b7cdbdbf4d29b4c74fceb4800d29ddbbaa29
Former-commit-id: 20e29c4ba31357b4f80c87335ea541758277ac42

--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,9 @@ NEW:
 - Update tool: admin/update
 - $_GET is always on now
 
+CHANGED:
+- MY_Pagination has now own config file site/config/pagination.php for template settings
+
 REMOVED:
 - build tool
 - less libraries
