- TESTS: Removing ciunit
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3192 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 79020382975bf0a5e98d7d83f77aef22bff31841
Former-commit-id: 52ee7faabbe47f4b807c0a2781bd2924c3fe7cfc
Former-commit-id: effc4675989c0679d72fcacc14e13ac428a47f19

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ UPDATE:
 NEW:
 - Update tool: admin/update
 - $_GET is always on now
-- Unit Testing with PhpUnit
+- Unit met PPHunit (en CIunit verwijderd)
 
 CHANGED:
 - MY_Pagination has now own config file site/config/pagination.php for template settings
