- CHANGED: Form: het type ’html’ is radikaal veranderd: het doet niets meer dan de gespecificieerde html in het attribuut ‘html’ plaatsen. - USERGUIDE: Een begin van meer uitleg bij Form
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3290 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: e724c412ca0507e3ecc5d44c8955390264cb23f0
Former-commit-id: d50e075fbbf8e4ee06eb1b406ad509afabc74f44
Former-commit-id: 97d2443224cf87c5cee1b26b3eceb6d4ccb76ff5 [formerly 89750d71f1021dec6a906da98a815933684f466a]
Former-commit-id: b697a22da6c3e8e0dd5469b3f7281e7879ef4977

--- a/changelog.txt
+++ b/changelog.txt
@@ -14,6 +14,7 @@ NEW:
 - Unit met PPHunit (en CIunit verwijderd)
 
 CHANGED:
+- Form: het 'html' type is aangepast. Zie documentatie bij Form
 - MY_Pagination has now own config file site/config/pagination.php for template settings
 
 REMOVED:
