- BUSY: DataModel -> many_to_one
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3371 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: d7ee0115f6cc02ea64167193038c074540217810
Former-commit-id: 96d6a3c73f63679254428fa3ad54e8a477f12467
Former-commit-id: 56deb746ada58aa5578402dc14e1cbc3bfddcfe4 [formerly 550f0a0825fdc4b73cd366f3bafbca27cf42924b]
Former-commit-id: 507a162b1bb2044068b234f242ec67513881b3de

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,19 @@
 Keep track of you're todo's here.
+
+
+PROFILER admin/test (tbl_leerlingen)
+====================================
+
+Wat             | with              | tijd    | geheugen | aantal queries
+----------------|-------------------|---------|----------|---------------
+Oud             |                   | 0.1050  | 5.06 Mb  | 4
+Nieuw           |                   | 0.0990  | 5.08 Mb  | 3
+Oud             | many_to_one       | 0.1150  | 5.23 Mb  | 9
+Nieuw (auto)    | many_to_one       | 0.1627  | 5.59 Mb  | 14
+Nieuw (models)  | many_to_one       | 0.1088  | 5.22 Mb  | 3
+
+
+
+
+
+
