- UPDATE TO CodeIgniter 3.0.2
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3412 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 5d1a58b97a97519c7c52fb4ad439477a03d02a85
Former-commit-id: b6735ea67e990f789b7ad868337b210c8d62f60e
Former-commit-id: 106e1ba781339aefe19643861314e77359ed0093 [formerly 7ba8c018468bf01d68194249c76ba128bb0c85f6]
Former-commit-id: eb3bc2ccd07845648ad31539a922a1aeecf19015

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,14 +1,19 @@
-Changes 3.x (xxxx)
+Changes 3.x (3412)
 ==================
 
 UPDATE:
 - CodeIgniter 3.0
 - CodeIgniter 3.0.1
+- CodeIgniter 3.0.2
+
+DEPRICATED:
+- Crud
 
 DB:
 - removed: cfg_media_info.b_in_database
 
 NEW:
+- TableModel
 - Update tool: admin/update
 - $_GET is always on now
 - Unit met PPHunit (en CIunit verwijderd)
