- TEST: CronJobTest a bit different
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3491 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 5e0a997aafb08600f709de4cc85c1a90e5567d3e
Former-commit-id: 1f32f23f9612e6ffaf35b35a194c6cb0411663e6
Former-commit-id: af0d4e636b4d35e844379ca5e68d21315023030b [formerly ac468d081cb1a9b49b605bc857e4d879d2960b2e]
Former-commit-id: a6f0e4ad8c41ec9e92039c47fa9467a148f0218c

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
+Changes 3.0.4 (3480...)
+=======================
+
+CHANGED:
+- thumbcache bestanden hebben nu niet de site/assets in hun naam
+- plugins hebben eigen submap in libraries
+
 Changes 3.0.4 (3460)
-==================
+====================
 
 UPDATE:
 - CodeIgniter 3.0
