- log_login changed to log_activity - log_activity logs all database,media,auth and email activity - homescreen changed to statistics
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3505 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 4dcfefa8d1a2c129108eb06cd3744e0a9beddd75
Former-commit-id: 4b3f3f73156bedf46e6a649d2266515cc948bbca
Former-commit-id: 8b967fb7e4026388937857aff0ac4eda5297eb27 [formerly abe0eeca000b32af52f84df5ff3e40a74784f16f]
Former-commit-id: 60c9048eeeed3f8da7c12b15e011ba8d336ad462

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+Changes 3.0.5 (3505...)
+=======================
+
+CHANGED:
+- log_login changed to log_activity
+- log_activity logs all database,media,auth and email activity
+- homescreen changed to statistics
+
+
 Changes 3.0.5 (3501...)
 =======================
 
