- BREAKING CHANGE: DataModel renamed to Data - BREAKING CHANGE: Data model naming and results of relations are changed
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3612 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: b95397f4b23f983ac614e54eb2108a81ea0e066a
Former-commit-id: f9b8f0869c9054f1f9942d42a4ae2eec9706a860
Former-commit-id: 95ac5c3e090836968ef8af5776954f8f217afce0 [formerly 491c8f2ec5c1603707507c5d4066f1c77087701b]
Former-commit-id: d8e9458cc7dda3d184eb38dd34339514caabfc2b

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+Changes 3.1.0 (3612...)
+=======================
+
+Breaking changes:
+- Renamed 'Data_Model' to 'Data'
+- Changed 'Data' relations system and naming to make it more flexibel
+
+
 Changes 3.0.7 (3592...)
 =======================
 
