- BREAKING CHANGE: 'Data' Removed data->with_grouped() - BREAKING CHANGE: 'Data' Added data->with_json()
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3625 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 97b26ed7046250c8af0920f32b7730ad227d6369
Former-commit-id: bfb3ed1e567e434516136f7e96f8998fb76672f2
Former-commit-id: ad6aa5896c80f21a1ce2bb604405f90421cdbdca [formerly f8dbb3253e26096afbc627748abd3dd0812d92e3]
Former-commit-id: ee313b35186c7c23111aa2da665b5e397334f227

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+Changes 3.1.1 (3625...)
+=======================
+
+Breaking changes:
+- 'Data' Removed data->with_grouped()
+- 'Data' Added data->with_json()
+
+
 Changes 3.1.0 (3612...)
 =======================
 
