- BREAKING CHANGE: Removed ->crud-> model - BREAKING CHANGE: Removed ->cfg_email-> crud model
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3630 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 7e9bd239c2d14d523620cd2ffdb186f7b9331a58
Former-commit-id: 19cd55ad998f1cb122069351b71fd47fc4276cff
Former-commit-id: 8d43c49143af3a8daf64525105a972fbbda3393c [formerly 323ef380c163d633522967fb89b4fa48ffda973d]
Former-commit-id: ed2aa7d993ca4c6d46e5ae018cfa772e1dacc211

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,14 @@
-Changes 3.1.1 (3625...)
+Changes 3.1.2 (3630)
 =======================
 
-Breaking changes:
+Breaking changes (if you used Crud):
+- Model ->crud-> removed.
+- Crud Models removed (cfg_users,cfg_email,cfg_admin_menu)
+
+Changes 3.1.1 (3625)
+=======================
+
+Breaking changes (if you used data->):
 - 'Data' Removed data->with_grouped()
 - 'Data' Added data->with_json()
 
@@ -9,7 +16,7 @@ Breaking changes:
 Changes 3.1.0 (3612...)
 =======================
 
-Breaking changes:
+Breaking changes (if you used data_model):
 - Renamed 'Data_Model' to 'Data'
 - Changed 'Data' relations system and naming to make it more flexibel
 
