--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+Changes 3.2.0 (3654)
+=======================
+
+Breaking changes if you uses ->user or ->ion_auth:
+- Update to latest IonAuth.
+- Removed ->user library
+- Replaced with ->flexy_auth library
+
+
 Changes 3.1.2 (3630)
 =======================
 
