--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+Changes 3.3.0
+=============
+
+- Update to CI 3.1.2
+- Split Userguide in andere repo
+- Mogelijk om FlexyAdmin te installeren in submap
+
+
 Changes 3.2.1 (3750)
 =======================
 
