--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+Changes 3.4.0
+=============
+
+- Safe folder structure
+- Ready for PHP7
+- Tested with SSL Cerfiticates
+
+
 Changes 3.3.0
 =============
 
