--- a/changelog.txt
+++ b/changelog.txt
@@ -1,12 +1,12 @@
 Changes 3.5.0
 =============
 
-BIG CHANGES:
 - UI with Vue & Bootstrap
 - Old UI removed
-- Models: Filemanager, Mediatable removed
+- Models: Filemanager, Mediatable removed and replaced with Assets
 - DB: res_media_files removed and replaced with res_assets
--
+- data->path() renamed to data->tree()
+- 
 
 Changes 3.4.0
 =============
