Rewrite data->find() & some styling
Former-commit-id: 5ab0fe247d5c2b51c3707087d3d623e27f5b2a65

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,7 +6,7 @@ Changes 3.5.0
 - Models: Filemanager, Mediatable removed and replaced with Assets
 - DB: res_media_files removed and replaced with res_assets
 - data->path() renamed to data->tree()
-- 
+- Rewrite data->find()
 
 Changes 3.4.0
 =============
