--- a/changelog.txt
+++ b/changelog.txt
@@ -2,11 +2,12 @@ Changes 3.5.0
 =============
 
 - UI with Vue & Bootstrap
-- Old UI removed
 - Models: Filemanager, Mediatable removed and replaced with Assets
-- DB: res_media_files removed and replaced with res_assets
-- data->path() renamed to data->tree()
 - Rewrite data->find()
+- data->path() renamed to data->tree()
+- URL: /admin changed to /_admin
+- URL: /file/... changed to /_media/...
+- DB: res_media_files removed and replaced with res_assets
 
 Changes 3.4.0
 =============
