--- a/changelog.txt
+++ b/changelog.txt
@@ -9,7 +9,7 @@ Changes 3.5.0
 - URL: /admin changed to /_admin
 - URL: /file/... changed to /_media/...
 - DB: res_media_files removed and replaced with res_assets
-
+- DB: removed almast all cfg_ tables
 
 Changes 3.4.x
 =============
