Samengesteld menu in Userguide
Former-commit-id: dbc166ed3972b1089ffb35b0beb722df29930f6a

--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,8 @@ Changes 3.5.0
 - URL: /file/... changed to /_media/...
 - DB: res_media_files removed and replaced with res_assets
 - DB: removed almast all cfg_ tables
+- DB: removed res_menu_result
+- Removed plugin_auto_menu (total rewrite, see site/config/menu.php for new options)
 
 Changes 3.4.x
 =============
